@@ -193,14 +193,15 @@ commands = eslint --color --report-unused-disable-directives .
 
 [testenv:mypy]
 basepython = {env:PYTHON:python3}
-passenv =
+passenv = TERM
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-dev.txt
+    -r{toxinidir}/misc/requirements/requirements-tests.txt
     -r{toxinidir}/misc/requirements/requirements-pyqt.txt
     -r{toxinidir}/misc/requirements/requirements-mypy.txt
 commands =
-    {envpython} -m mypy qutebrowser {posargs}
+    {envpython} -m mypy qutebrowser tests {posargs}
 
 [testenv:sphinx]
 basepython = {env:PYTHON:python3}
